--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,10 @@
+1.0.4 (2020/6/16)
+- import fix-permissions from jupyter/docker-stacks
+- put scripts under /usr/local/bin
+
+1.0.3 (2020/6/15)
+- some testing...
+
 1.0.2(2020/6/11)
 - rebuild with jupyter_client==5.3.1 to avoid kernel error on Windows 10
 
